<resources>
    <string name="app_name">ToDo App</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_task_list">ToDo App</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="prompt">Pick Sort Method</string>
    <string name="sort">Sort By:</string>
    <string name="set_a_reminder">Set a Reminder:</string>
    <string name="exit">Close Program</string>
    <string name="date_created">Date Created: </string>
    <string name="reminder_set_to">Reminde Me On:</string>
    <string name="set_new_reminder">Set New Reminder: </string>
    <string name="set_proximity">Set Proximity Alert: </string>
    <string name="share">Share</string>
    <string name="from_map">Map</string>
    <string name="from_address">Address</string>
    <string name="enter_address">Please Eneter Address:</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    
    <string-array name="sorts_options">
        <item >Please Choose\.\.\.</item>
        <item >Date Created</item>
        <item >Task Title Name</item>
    </string-array>
    
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
</resources>