<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carbon" >
    
    <ImageView 
        android:id="@+id/owel_logo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/owel"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp" />
    
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/owel_logo_main"
        android:background="@drawable/add_new_button"/>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_spinner"
        android:divider="@android:color/transparent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:dividerHeight="7.0sp" >

    </ListView>

    <TextView
        android:id="@+id/sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_button"
        android:text="@string/sort"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#734741"
        android:textSize="22sp"/>

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_button"
        android:layout_toRightOf="@+id/sort"
        android:clickable="true"
        android:layout_marginBottom="5dp"
        android:entries="@array/sorts_options"
        android:prompt="@string/prompt" />

</RelativeLayout>
